--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.96",
     "@mui/material": "^5.10.1",
     "@mui/x-data-grid": "^5.16.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,12 +19,14 @@
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "faker": "^6.6.6",
+    "filesize": "^9.0.11",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-number-format": "^4.9.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
