--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.96",
     "@mui/material": "^5.10.1",
     "@mui/x-data-grid": "^5.16.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "@types/node": "^16.11.52",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "faker": "^6.6.6",
@@ -27,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-number-format": "^4.9.3",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
